cmd/staker-manager/k8s/01-staker-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staker-manager
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staker-manager
  template:
    metadata:
      labels:
        app: staker-manager
    spec:
      containers:
      - name: staker-manager
        image: uhub.service.ucloud.cn/entropypool/staker-manager:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "350m"
          limits:
            memory: "200Mi"
            cpu: "350m"

---
apiVersion: v1
kind: Service
metadata:
  name: staker-manager
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50180
    targetPort: 50180
  - name: grpc
    port: 50181
    targetPort: 50181
  - name: prometheus
    port: 50182
    targetPort: 50182
  selector:
    app: staker-manager
