cmd/staker-manager/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: staker-manager-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: staker-manager
    k8s.kuboard.cn/workload: staker-manager
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-staker-manager-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/staker-manager/version
            backend:
              serviceName: staker-manager
              servicePort: 50180
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules
    - host: www.procyon.vip
      http: *http_rules
    - host: procyon.vip
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-staker-manager-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/staker-manager
